Bump to version 0.5.1 and update changelog
[skip ci]